--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
-	filter: blur(15px);
+	filter: blur(15px) brightness(0.8);
 	height: 100%;
 }
 
